Fixed `account-view` alignment

--- a/app/styles/configuration/accounts.scss
+++ b/app/styles/configuration/accounts.scss
@@ -101,6 +101,10 @@
         a {
           margin: 0;
         }
+
+        h4 {
+          margin-top: 0;
+        }
       }
     }
 
